r129:
Added  : LZ4_compress_fast()
Added  : AppVeyor CI environment, for Visual tests - Suggested by Takayuki Matsuoka
Updated: Documentation converted to MarkDown

r128:
New    : lz4cli sparse file support (Requested by Neil Wilson, and contributed by Takayuki Matsuoka)
New    : command -m, to compress multiple files in a single command (suggested by Kyle J. Harper)
Fixed  : Restored lz4hc compression ratio (slightly lower since r124)
New    : lz4 cli supports long commands (suggested by Takayuki Matsuoka)
New    : lz4frame & lz4cli frame content size support
New    : lz4frame supports skippable frames, as requested by Sergey Cherepanov
Changed: Default "make install" directory is /usr/local, as notified by Ron Johnson
New    : lz4 cli supports "pass-through" mode, requested by Neil Wilson
New    : datagen can generate sparse files
New    : scan-build tests, thanks to kind help by Takayuki Matsuoka
New    : g++ compatibility tests
New    : arm cross-compilation test, thanks to kind help by Takayuki Matsuoka
Fixed  : Fuzzer + frametest compatibility with NetBSD (issue #48, reported by Thomas Klausner)
Added  : Visual project directory
Updated: Man page & Specification

r127:
N/A   : added a file on SVN

r126:
New   : lz4frame API is now integrated into liblz4
Fixed : GCC 4.9 bug on highest performance settings, reported by Greg Slazinski
Fixed : bug within LZ4 HC streaming mode, reported by James Boyle
Fixed : older compiler don't like nameless unions, reported by Cheyi Lin
Changed : lz4 is C90 compatible
Changed : added -pedantic option, fixed a few mminor warnings

r125:
Changed : endian and alignment code
Changed : directory structure : new "lib" directory
Updated : lz4io, now uses lz4frame
Improved: slightly improved decoding speed
Fixed : LZ4_compress_limitedOutput(); Special thanks to Christopher Speller !
Fixed : some alignment warnings under clang
Fixed : deprecated function LZ4_slideInputBufferHC()

r124:
New : LZ4 HC streaming mode